# SDRPlusPlus_SwissKnifeEdition

./: CMakeLists.txt  README.md  install_sdrpp_custom.sh
decoder_modules/: CMakeLists.txt
decoder_modules/acars_decoder/: README.md
decoder_modules/adsb_decoder/: README.md  test_server.py  test_tcp.cpp
decoder_modules/adsb_decoder/src/: main.cpp  tcp_sender.h
decoder_modules/ais_decoder/: README.md
decoder_modules/ais_decoder/src/: main.cpp
decoder_modules/aprs_decoder/: BUILDING.md  CMAKE_INTEGRATION.txt  CMakeLists.txt  README.md  apply_to_sdrpp.sh  test_altitude.cpp  test_decoder.cpp  test_parse.cpp  test_weather.cpp
decoder_modules/aprs_decoder/django/: django_integration_examples.py  listen_aprs.py
decoder_modules/aprs_decoder/resources/aprs/: CREDITS.txt
decoder_modules/aprs_decoder/src/: dsp.h  main.cpp  tcp_sender.h
decoder_modules/aprs_decoder/src/aprs/: afsk.h  ax25.h  symbols.h
decoder_modules/contestia_decoder/: CMakeLists.txt
decoder_modules/contestia_decoder/src/: decoder.h  main.cpp
decoder_modules/contestia_decoder/src/contestia/: decoder.h  modem.h
decoder_modules/contestia_decoder/test/: README.md  contestia_decode_wav.cpp  contestia_gen.cpp  contestia_roundtrip.cpp
decoder_modules/cospas_sarsat_decoder/src/: main.cpp  tcp_sender.h
decoder_modules/cw_decoder/: CMakeLists.txt  README.md
decoder_modules/cw_decoder/src/: cw_decoder.h  cw_dsp.h  cw_squelch.h  main.cpp  morse.cpp  morse.h
decoder_modules/cw_decoder/src/test/: test_decode.cpp
decoder_modules/dab_decoder/: CMakeLists.txt
decoder_modules/dab_decoder/src/: dab_channels.h  dab_handlers.h  dab_input.h  main.cpp
decoder_modules/dominoex_decoder/: CMakeLists.txt
decoder_modules/dominoex_decoder/src/: decoder.h  main.cpp
decoder_modules/dominoex_decoder/src/dominoex/: decoder.h  generator.h  modem.h  modem_dsp.h  varicode.h
decoder_modules/dominoex_decoder/test/: decode_wav.cpp  test_dominoex.cpp
decoder_modules/drm_decoder/dream_patches/: fdk_aac_codec.cpp
decoder_modules/drm_decoder/src/: main.cpp
decoder_modules/dsd_decoder/: CMakeLists.txt  DJANGO_LRRP_INTEGRATION.md  LICENSE  README.md
decoder_modules/dsd_decoder/src/: main.cpp  rigctl_client.h  rigctl_internal.h  subprocess.h  tcp_sender.h
decoder_modules/freedv_decoder/: CMakeLists.txt
decoder_modules/freedv_decoder/samples/: README.md
decoder_modules/freedv_decoder/src/: freedv_core.h  freedv_dsp.h  main.cpp
decoder_modules/freedv_decoder/src/test/: gen_freedv.c  make_iq.py  test_decode.cpp
decoder_modules/gps_decoder/: CMakeLists.txt  README.md
decoder_modules/gps_decoder/src/: gps_acquisition.cpp  gps_acquisition.h  gps_ca_code.cpp  gps_ca_code.h  gps_decoder.cpp  gps_decoder.h  gps_ephemeris.cpp  gps_ephemeris.h  gps_nav.cpp  gps_nav.h  gps_parity.cpp  gps_parity.h  gps_pvt.cpp  gps_pvt.h  gps_time.cpp  gps_time.h  gps_tracking.cpp  gps_tracking.h  main.cpp
decoder_modules/hell_decoder/: CMakeLists.txt  README.md  root_CMakeLists_additions.txt
decoder_modules/hell_decoder/src/: decoder.h  main.cpp
decoder_modules/hell_decoder/src/feld/: feld.h
decoder_modules/hell_decoder/src/hell/: decoder.h
decoder_modules/hfdl_decoder/src/: main.cpp  systable_data.h  tcp_sender.h
decoder_modules/hfdl_decoder/test/: lifecycle_stress.cpp
decoder_modules/hfdl_decoder/tools/: hfdl_gen.py
decoder_modules/js8_decoder/: CMakeLists.txt  README.md
decoder_modules/js8_decoder/src/: js8_core.cpp  js8_core.h  js8_ldpc.h  js8_varicode.cpp  js8_varicode.h  main.cpp  tcp_sender.h
decoder_modules/js8_decoder/tools/: js8gen.cpp  js8test.cpp
decoder_modules/meteor_demodulator/src/: main.cpp
decoder_modules/meteor_demodulator/src/lrpt/: lrpt_decoder.h
decoder_modules/meteor_demodulator/tools/: README.md  build_gen.sh  make_test_cs8.sh  meteor_lrpt_gen  meteor_lrpt_gen.cpp
decoder_modules/mt63_decoder/: CMakeLists.txt
decoder_modules/mt63_decoder/src/: decoder.h  main.cpp
decoder_modules/mt63_decoder/src/mt63/: decoder.h  modem.h
decoder_modules/mt63_decoder/test/: README.md  mt63_decode_wav.cpp  mt63_gen.cpp  mt63_roundtrip.cpp
decoder_modules/pager_decoder/src/: main.cpp
decoder_modules/pager_decoder/src/flex/: decoder.h  dsp.h  flex.cpp  flex.h
decoder_modules/pager_decoder/src/pocsag/: decoder.h
decoder_modules/psk_decoder/: CMakeLists.txt  README.md
decoder_modules/psk_decoder/src/: decoder.h  main.cpp
decoder_modules/psk_decoder/src/common/: auto_tune.h  mfsk_varicode.h  psk_diff.h  tone_mixer.h  varicode.h  viterbi_k5.h  viterbi_k7.h
decoder_modules/psk_decoder/src/dsp/: psk_wsinc.h
decoder_modules/psk_decoder/src/psk/: decoder.h  psk8_decoder.h  qpsk_decoder.h
decoder_modules/radiosonde_decoder/: main.cpp  main.hpp
decoder_modules/radiosonde_decoder/src/: main.cpp  main.hpp  tcp_sender.h  utils.cpp
decoder_modules/rtl_433_decoder/: CMAKE_INTEGRATION.txt  CMakeLists.txt  README.md
decoder_modules/rtl_433_decoder/src/: main.cpp  rtl433_bridge_dsp.h  rtl433_lib.cpp  rtl433_lib.h
decoder_modules/rtty_decoder/: CMakeLists.txt  README.md
decoder_modules/rtty_decoder/src/: decoder.h  main.cpp
decoder_modules/src/: hfdl_parse.h  main.cpp
decoder_modules/sstv_decoder/: CMakeLists.txt  README.md
decoder_modules/sstv_decoder/src/: main.cpp  sstv_decoder.cpp  sstv_decoder.h  sstv_modes.h
decoder_modules/test/: test_coproc.cpp
decoder_modules/tetra_decoder/: CMakeLists.txt  README.md
decoder_modules/tetra_decoder/src/: gui_widgets.h  main.cpp
decoder_modules/tools/: gen_systable.py
decoder_modules/vdl2_decoder/: CMakeLists.txt  README.md  apply_to_sdrpp.sh
decoder_modules/vdl2_decoder/src/: main.cpp
decoder_modules/vdl2_decoder/test/: test_coproc.cpp
decoder_modules/wefax_decoder/: CMakeLists.txt  INTEGRATION.txt  README.md
decoder_modules/wefax_decoder/src/: main.cpp  wefax_decoder.cpp  wefax_decoder.h
misc_modules/satellite_tracker/: CMakeLists.txt  README.md
misc_modules/satellite_tracker/src/: main.cpp  rigctl_internal.h  satellite_freqs.h  tcp_sender.h  tle_manager.cpp  tle_manager.h  tracker_engine.h
(+81 files in other folders)
